# needle

./: Cargo.toml  README.md
src/: consts.rs  main.rs  store.rs  traits.rs  types.rs
src/core/: id.rs  int.rs  ip.rs  mod.rs  qwerty.rs  strcase.rs  strcmp.rs  strdiff.rs
src/index/: item.rs  mod.rs
src/index/impls/: mod.rs  wi_index.rs
src/index/wrappers/: click.rs  mod.rs
src/server/: handlers.rs  mod.rs  types.rs
src/storage/: disk.rs  mod.rs
