[package]
name = "needle"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.10.0"
async-trait = "0.1.52"
itertools = "0.10.1"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
t1ha = "0.1.0"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
warp = "0.3.2"
uuid = { version = "0.8.2", features = ["v4"] }

[profile.release]
panic = "abort"